# EdcellenceTQM

./: .gitignore  CLEAN_REPO_SUMMARY.txt  DEPLOYMENT_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  INSTALLATION.md  JKSU_CIS_SUBMISSION_CHECKLIST.md  LICENSE  MANIFEST.in  MANUSCRIPT_CODE_AVAILABILITY.md  PHASE2_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  PUSH_TO_GITHUB.bat  QUICK_UPLOAD.bat  QUICK_UPLOAD.sh  README.md  READY_FOR_PUBLICATION.md  REPOSITORY_STATUS.md  RESTRUCTURE_PLAN.md  RESTRUCTURING_STATUS.md  SHARING_GUIDE.md  TESTING_REPORT.md  VISUALIZATION_VERIFICATION.md  docker-compose.yml  push.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_environment.py  test_notebooks.py  venv-tqm.bat  venv-tqm.sh
data/examples/: benchmark_results.csv  benchmark_results_scalability.csv  department_scores.json  sample_assessment_data.csv
database/: schema_simplified.sql
edcellence_tqm/: __init__.py  __version__.py
edcellence_tqm/core/: __init__.py
edcellence_tqm/visualization/: __init__.py
examples/notebooks/: 04_Organizational_Assessment.ipynb  05_Gap_Prioritization.ipynb  06_Integration_Health.ipynb  07_Scalability_Benchmarks.ipynb  08_Publication_Figures.ipynb
examples/scripts/: basic_assessment.py  generate_figures.py
figures/publication/: MANUSCRIPT_INTEGRATION.md
notebooks/: 01_QuickStart.ipynb  02_ADLI_Analysis.ipynb  03_LeTCI_Results.ipynb
src/: adli_letci_core.py  visualizations.py
test_outputs/: test_report.json
tests/: conftest.py  test_core.py  test_integration.py
